app/card.css
@import url('https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,700');
* {
  box-sizing: border-box;
  font-family: 'Gentium Book Basic';
}
html {
  background-color: LIGHTGREY;
  padding: 0rem;
  margin: 1rem;
  font-size: 1.0cm;
  overflow-y: scroll;
}
body {
  padding: 0rem;
  margin: 0rem;
  overflow: visible;
}
.badge, .shadow {
  border-style: solid;
  border-color: #454545;
  border-top-width: 0.12rem;
  border-left-width: 0.12rem;
  border-bottom-width: 0.21rem;
  border-right-width: 0.21rem;
  border-radius: 0.25rem;
}
.badge {
  background-color: WHITESMOKE;
}
.hidden {
  display: none;
}
.zigzag {
  border-bottom-width: 0rem;
}
.zigzag::after {
    box-sizing: border-box;
    position: absolute;
    bottom: 0.00rem;
    left: 0.0rem;
    content: "";
    width: 100%;
    border-style: solid;
    border-bottom-width: 0.5rem;
    border-image: url(https://qoomon.github.io/Jira-Issue-Card-Printer/resources/Tearing.png);
    border-image-width: 0 0 0.7rem 0;
    border-image-slice: 56 0 56 1;
    border-image-repeat: round round;
}
.author {
  color: #989898;
  position: relative;
  left: 0.5rem;
  display: table;
  margin: 0 auto;
  overflow: visible;  
}
.author > div:nth-of-type(1) {
  position: relative;
  font-size: 10px;
}
.author > div:nth-of-type(2) {
  position: relative;

  left: -0.1rem;
  display: table;
  font-size: 8px;
  margin: 0 auto;
  overflow: visible;
}
.card {
  position: relative;
  float: left;
  height: 100%;
  width: 100%;
  padding: 0.5rem;
  min-width: 14.5rem;
  min-height: 8.65rem;
  overflow: hidden;
  background-color: WHITE;
}
.card::before {
    box-sizing: border-box;
    overflow: visible;
    position: absolute;
    top: 0.0rem;
    left: 0.0rem;
    content: "";
    width: 100%;
    height: 100%;
    border-color: LightGray;
    border-style: dashed;
    border-width: 0.03cm;
}
.card-content {
  position: relative;
  height: 100%;
  // find .card-header;
  padding-top: 2rem;
  // find .card-footer;
  padding-bottom: 1.3rem;
}
.card-body {
  overflow: hidden;
  position: relative;
  height: 100%;
  margin-left: 0.4rem;
  margin-right: 0.4rem;
  padding-top: 1.1rem;
  padding-bottom: 1.1rem;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  background: WHITE;
}
.card-header {
  position: absolute;
  top: 0rem;
  height: 4.2rem;
  width: 100%;
}
.card-footer {
  position: absolute;
  bottom: -0.2rem;
  height: 2.2rem;
  width: 100%;
}
.issue-summary {
  font-weight: bold;
  font-size: 0.9rem;
}
.issue-description {
  margin-top: 0.1rem;
  display: block;
  font-size: 0.6rem;
  line-height: 0.62rem;
  overflow: hidden;
}
.issue-description p:first-of-type {
  margin-top: 0rem;
}
.issue-description p:last-of-type {
  margin-bottom: 0rem;
}
.issue-id {
  position: absolute;
  left: 1rem;
  top: 1.2rem;
  height: 1.5rem;
  max-width: calc(100% - 7.5rem);
  min-width: 6.0rem;
  padding-left: 2.1rem;
  padding-right: 0.4rem;
  background-color: WHITESMOKE;
  line-height: 1.3rem;
  font-size: 0.8rem;
  font-weight: bold;
  text-align: center;
  white-space: nowrap;
  direction: rtl;
  overflow: hidden;
  text-overflow: ellipsis;
}
.issue-icon {
  position: absolute;
  left: 0rem;
  top: 0rem;
  height: 3.0rem;
  width: 3.0rem;
  border-radius: 50%;
  background-color: DEEPSKYBLUE;
  background-image: url(https://qoomon.github.io/Jira-Issue-Card-Printer/resources/icons/CloudLoading.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: 63%;
}
.issue-estimate {
  position: absolute;
  left: 2.5rem;
  top: 0.0rem;
  height: 1.6rem;
  width: 1.6rem;
  border-radius: 50%;
  background-color: WHITESMOKE;
  line-height: 1.4rem;
  font-size: 0.9rem;
  font-weight: bold;
  text-align: center;
}
.issue-qr-code {
  position: relative;
  float: left;
  margin-right: 0.5rem;
  width: 2.2rem;
  height: 2.2rem;
  background-image: url(https://chart.googleapis.com/chart?cht=qr&chs=256x256&chld=L|1&chl=qoomon.me);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}
.issue-attachment {
  position: relative;
  float: left;
  top: 0.1rem;
  width: 2.0rem;
  height: 2.0rem;
  border-radius: 50%;
  background-color: LIGHTSKYBLUE;
  background-image: url(https://qoomon.github.io/Jira-Issue-Card-Printer/resources/icons/Attachment.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: 70%;
}
.issue-assignee {
  position: relative;
  float: right;
  margin-left: 0.5rem;
  width: 2.2rem;
  height: 2.2rem;
  border-radius: 50%;
  background-color: WHITESMOKE;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  //-webkit-filter: contrast(200%) grayscale(100%);
  //filter: contrast(200%) grayscale(100%);
  text-align: center;
  font-weight: bold;
  font-size: 1.0rem;
  line-height: 2.0rem;
}
.issue-tags-box {
  position: relative;
  float: right;
  width: auto;
  min-width: 2rem;
  width: auto;
  max-width: calc(100% - 5.4rem);
  height: auto;
  font-size: 0.6rem;
  line-height: 0.6rem;
  text-align: right;
}
.issue-tag {
  display: inline-block;
  padding: 0.1rem 0.2rem;
  margin: 0.08rem 0.1rem;
  margin-bottom: 0rem;
  border-top-width: 0.1rem;
  border-left-width: 0.1rem;
  border-bottom-width: 0.15rem;
  border-right-width: 0.15rem;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.issue-due-date-box {
  position: absolute;
  right: 0rem;
  top: 0rem;
  overflow: visible !important;
}
.issue-due-date {
  position: absolute;
  top: 1.3rem;
  right: 1rem;
  width: 5.3rem;
  height: 1.3rem;
  padding-left: 0.2rem;
  padding-right: 1.4rem;
  text-align: center;
  font-weight: bold;
  font-size: 0.7rem;
  line-height: 1.0rem;
}
.issue-due-icon {
  position: absolute;
  top: 0.5rem;
  right: 0rem;
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  background-color: ORCHID;
  background-image: url(https://qoomon.github.io/Jira-Issue-Card-Printer/resources/icons/AlarmClock.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: 65%;
}

@media print {
  @page {
    margin: 0.0mm;
    padding: 0.0mm;
  }
  html {
    width: 100vw; 
    height: 100vh;
    margin: 0.0mm;
    padding: 0.0mm;
    background-color: WHITE !important;
    -webkit-print-color-adjust: exact;
    print-color-adjust: exact;
  }
  .card {
    page-break-inside: avoid !important;
    margin: 0.0mm !important;
  }
}

